test/e2e/pass/generics/explicit_and_inferred_share_instance.cst
fn id<T>(value: T) -> T {
    value
}

fn main() -> num {
    let first = id(0);
    id::<num>(first)
}
