test/e2e/fail_compile/type_errors/type_mismatch.cst
fn main() {
    let x: num = "not a number";
    println("This should not compile");
}
